--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Password Retriever</title>
+    <title>Personal Portfolio</title>
     
     <style>
     body {
-      background-color: #000080;
+      background-color: #000066;
     }
 
     h2 {
@@ -18,6 +18,10 @@
     p {
       font-family: "Verdana";
       color: #F0FFFF;
+    }
+
+    a {
+      color: #00FFFF
     }
     </style>
   </head>
